[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["yilbegan <w2v@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
environs = "^8.0.0"
aio-pika = "^6.6.1"
python-multipart = "^0.0.5"
ujson = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
